2014-2-24 <JDT>
   Fixed embarrassing bug with min_axes (error introduced after v1.0 to make it the same as onepass_kt)
   Simplified GeometricMeasure and added possibility of beta dependence
   Commented out WTA2 options, since those have not been fully tested (nor do they seem particularly useful at the moment).  They can be reinstated if the physics case can be made to use them.
   Split example into example_basic_usage and example_advanced_usage
2014-1-28 <TJ>
   Added new options in WinnerTakeAllRecombiner to use either pT or pT^2/E to recombine particles
2014-1-24 <JDT>
   Added access to currentAxes from Nsubjettiness.
2014-1-18 <JDT>
   Added beam regions to MeasureFunction, correspondingly renamed functions to have jet and beam regions
   Renamed functions in TauComponents for consistency with MeasureFunction
   Adding debugging code to AxesFinderFromOnePassMinimization::getAxes
   Worked extensively on example.cc to make sure that it tests all available options.
   Rewrote PrintJets command in example.cc for later improvements
   Converted some magic numbers to std::numeric_limits<double>::max()
2014-1-17 <JDT>
   Rewrote KMeansMinimization to call OnePassMinimization, adding noise explicitly.
   Removed any nothing of noise from OnePassMinimization
   Removed Double32_t for root usage is Nsubjettiness
   Clean up of many comments throughout the code, updating of README file
   Removed unnecessary establishAxes in Njettiness
   Removed bare constructor for Njettiness to avoid incompatibility with enum choices, may reinstate later.  Also removed setMeasureFunction, setAxesFinder for same reason
   NjettinessExtras now calls TauComponents
2014-1-16 <TJ>
   Moved minimization functions to OnePassMinimization, changed KMeansMinimization class to simply call OnePassMinimization a specified number of times
   Added extra tau function in TauComponents for users to get tau directly