@@ -146,7 +146,7 @@ void analyze(const vector<PseudoJet> & input_particles) {
       cout << setprecision(6) << right << fixed;
       
       cout << "-------------------------------------------------------------------------------------" << endl;
-      cout << setw(14) << "beta"
+      cout << setw(15) << "beta"
          << setw(14) << "tau1"
          << setw(14) << "tau2"
          << setw(14) << "tau3"
@@ -191,25 +191,111 @@ void analyze(const vector<PseudoJet> & input_particles) {
       double tau32_beta2 = nSub32_beta2(antikt_jets[j]);
       
       // Output results (beta = 1.0)
-      cout << setw(14) << beta1
+      cout << setw(15) << beta1
          << setw(14) << tau1_beta1
          << setw(14) << tau2_beta1
          << setw(14) << tau3_beta1
          << setw(14) << tau21_beta1
          << setw(14) << tau32_beta1
          << endl;
-
+      
       // Output results (beta = 2.0)
-      cout << setw(14) << beta2
+      cout << setw(15) << beta2
          << setw(14) << tau1_beta2
          << setw(14) << tau2_beta2
          << setw(14) << tau3_beta2
          << setw(14) << tau21_beta2
          << setw(14) << tau32_beta2
          << endl;
+
+      
+      cout << "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^" << endl;
+      cout << "Axes used for above beta = 1.0 tau values" << endl;
+      
+      PrintJets(nSub1_beta1.currentAxes());
+      //PrintJets(nSub1_beta1.seedAxes());  // For one-pass minimization, this would show starting seeds
+      cout << "- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -" << endl;
+      PrintJets(nSub2_beta1.currentAxes());
+      //PrintJets(nSub2_beta1.seedAxes());  // For one-pass minimization, this would show starting seeds
+      cout << "- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -" << endl;
+      PrintJets(nSub3_beta1.currentAxes());
+      //PrintJets(nSub3_beta1.seedAxes());  // For one-pass minimization, this would show starting seeds
       
       cout << "-------------------------------------------------------------------------------------" << endl;
 
    }
 
 }
+
+void PrintJets(const vector <PseudoJet>& jets, bool commentOut) {
+   
+   string commentStr = "";
+   if (commentOut) commentStr = "#";
+   
+   // gets extras information
+   if (jets.size() == 0) return;
+   const NjettinessExtras * extras = njettiness_extras(jets[0]);
+   
+   bool useExtras = (extras != NULL);
+   bool useArea = jets[0].has_area();
+   
+   // define nice tauN header
+   int N = jets.size();
+   stringstream ss(""); ss << "tau" << N; string tauName = ss.str();
+   
+   cout << fixed << right;
+   
+   cout << commentStr << setw(5) << "jet #" << "   "
+   <<  setw(10) << "rap"
+   <<  setw(10) << "phi"
+   <<  setw(11) << "pt"
+   <<  setw(11) << "m"
+   <<  setw(11) << "e";
+   if (useExtras) cout << setw(14) << tauName;
+   if (useArea) cout << setw(10) << "area";
+   cout << endl;
+   
+   fastjet::PseudoJet total(0,0,0,0);
+   
+   // print out individual jet information
+   for (unsigned i = 0; i < jets.size(); i++) {
+      cout << commentStr << setw(5) << i+1  << "   "
+      << setprecision(4) <<  setw(10) << jets[i].rap()
+      << setprecision(4) <<  setw(10) << jets[i].phi()
+      << setprecision(4) <<  setw(11) << jets[i].perp()
+      << setprecision(4) <<  setw(11) << max(jets[i].m(),0.0) // needed to fix -0.0 issue on some compilers.
+      << setprecision(4) <<  setw(11) << jets[i].e();
+      if (useExtras) cout << setprecision(6) <<  setw(14) << max(extras->subTau(jets[i]),0.0);
+      if (useArea) cout << setprecision(4) << setw(10) << (jets[i].has_area() ? jets[i].area() : 0.0 );
+      cout << endl;
+      total += jets[i];
+   }
+   
+   // print out total jet
+   if (useExtras) {
+      double beamTau = extras->beamTau();
+      
+      if (beamTau > 0.0) {
+         cout << commentStr << setw(5) << " beam" << "   "
+         <<  setw(10) << ""
+         <<  setw(10) << ""
+         <<  setw(11) << ""
+         <<  setw(11) << ""
+         <<  setw(11) << ""
+         <<  setw(14) << setprecision(6) << beamTau
+         << endl;
+      }
+      
+      cout << commentStr << setw(5) << "total" << "   "
+      <<  setprecision(4) << setw(10) << total.rap()
+      <<  setprecision(4) << setw(10) << total.phi()
+      <<  setprecision(4) << setw(11) << total.perp()
+      <<  setprecision(4) << setw(11) << max(total.m(),0.0) // needed to fix -0.0 issue on some compilers.
+      <<  setprecision(4) <<  setw(11) << total.e()
+      <<  setprecision(6) << setw(14) << extras->totalTau();
+      if (useArea) cout << setprecision(4) << setw(10) << (total.has_area() ? total.area() : 0.0);
+      cout << endl;
+   }
+   
+}
+
