@@ -1,3 +1,5 @@
+2014-2-25 <JDT>
+   Added access to seedAxes used for one-pass minimization routines.
 2014-2-24 <JDT>
    Fixed embarrassing bug with min_axes (error introduced after v1.0 to make it the same as onepass_kt)
    Simplified GeometricMeasure and added possibility of beta dependence
